// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-split pf-m-gutter"
  >
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Wrappable 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-split pf-m-wrap"
  >
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
    <div
      class="pf-v6-l-split__item"
    >
      Basic Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`component on Split 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-l-split"
  >
    <div
      class="pf-v6-l-split__item"
    >
      Basic content
    </div>
  </span>
</DocumentFragment>
`;

exports[`component on SplitItem 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-split"
  >
    <span
      class="pf-v6-l-split__item"
    >
      Basic content
    </span>
  </div>
</DocumentFragment>
`;

exports[`isFilled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-split"
  >
    <div
      class="pf-v6-l-split__item pf-m-fill"
    >
      Main content
    </div>
  </div>
</DocumentFragment>
`;

exports[`isFilled defaults to false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-split"
  >
    <div
      class="pf-v6-l-split__item"
    >
      Basic content
    </div>
  </div>
</DocumentFragment>
`;
